CI-74 chore: remove hibernate