@@ -37,22 +37,10 @@ val daggerVersion = "2.56"
 val hibernateVersion = "6.6.12.Final"
 
 dependencies {
+    implementation("org.mindrot:jbcrypt:0.4")
 
     // Database
     runtimeOnly("org.postgresql:postgresql:42.7.2")
-
-    // Hibernate
-    implementation("org.hibernate:hibernate-core:$hibernateVersion"){
-        exclude(group="org.jboss.spec.javax.naming", module="jobss-naming-api_1.2_spec")
-    }
-    implementation("org.hibernate.validator:hibernate-validator:8.0.1.Final")
-    implementation("org.hibernate.common:hibernate-commons-annotations:6.0.6.Final")
-    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
-    implementation("jakarta.transaction:jakarta.transaction-api:2.0.1")
-    implementation("jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1")
-    implementation("org.hibernate.orm:hibernate-jpamodelgen:$hibernateVersion")
-    annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen:$hibernateVersion")
-//    implementation("jakarta.naming:jakarta.naming-api:2.0.0")
 
     implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
 
@@ -85,13 +73,11 @@ jlink {
             "--no-header-files",
             "--no-man-pages"
     )
-
     launcher {
         name = rootProject.name
         jvmArgs = listOf("-Djdk.gtk.version=2")
     }
     jpackage {
-//        jvmArgs.addAll(listOf("--add-exports", "java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED"))
         if (System.getProperty("os.name").lowercase().contains("linux")) {
             targetPlatformName = "linux"
             installerType = "deb"
@@ -114,9 +100,10 @@ jlink {
         ))
         imageOptions = listOf("--icon", "src/main/resources/img/Logo32x32.ico")
     }
-
     addExtraDependencies("org.slf4j")
     addExtraDependencies("ch.qos.logback")
+    addExtraDependencies("postgresql")
+    addOptions("--add-modules", "jakarta.cdi,jakarta.inject")
 }
 
 tasks.register("installerFileName") {
@@ -199,6 +186,6 @@ tasks.processResources {
 
 tasks.compileJava {
     options.compilerArgs.addAll(listOf(
-            "--add-modules", "jakarta.persistence,jakarta.inject"
+            "--add-modules", "jakarta.inject,java.sql,java.naming,java.desktop"
     ))
 }
